--- a/app/views/layouts/bravura_template_prime/application.html.erb
+++ b/app/views/layouts/bravura_template_prime/application.html.erb
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bravura template prime</title>
+  <title><%= get_setting('general.blog_title') %></title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= yield :head %>
-
-  <%= stylesheet_link_tag    "bravura_template_prime/application", media: "all" %>
+  <%= stylesheet_link_tag "bravura_template_prime/application", media: "all" %>
+  <%= javascript_include_tag "bravura_template_prime/application" %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= yield %>
 </body>
 </html>
