ADD: MVP ViewStratgies

--- a/app/views/layouts/bravura_template_prime/application.html.erb
+++ b/app/views/layouts/bravura_template_prime/application.html.erb
@@ -10,7 +10,10 @@
   <%= stylesheet_link_tag    "bravura_template_prime/application", media: "all" %>
 </head>
 <body>
+<h1>
+bravura_temlpate_prime_template layout
 
+</h1>
 <%= yield %>
 
 </body>
