--- a/app/views/bravura_template_prime/blog/index.html.erb
+++ b/app/views/bravura_template_prime/blog/index.html.erb
@@ -1,14 +1,1 @@
-<%# app/views/bravura_template_prime/blog/index.html.erb %>
-
-<div class="blog-hero">
-  <h1><%= @presenter.blog_hero_title %></h1>
-  <p><%= @presenter.blog_hero_description %></p>
-</div>
-
-<div class="blog-posts-container">
-  <% if @posts.any? %>
-    <%= render partial: "post", collection: @posts %>
-  <% else %>
-    <p>No posts found.</p>
-  <% end %>
-</div>
+<h1>bravura_temlpate_prime index</h1>
