--- a/app/views/shared/_right_nav_links.html.erb
+++ b/app/views/shared/_right_nav_links.html.erb
@@ -4,8 +4,7 @@
     class: 'nav-link nav-link-left nav-link-GENERATED_PAGE nav-link-3fcd12e9-1b30-4b8d-9f02-76ed1ba17043 group inline-flex items-center justify-center gap-1 text-base transition-all duration-200 rounded-cta-button-radius px-3 py-1.5 hover:bg-secondary-100 focus:outline-none focus:ring-2 focus:ring-offset-2 font-medium text-secondary-500 hover:text-secondary-900 focus:ring-secondary-900',
     data: { umami_event: 'Clicked Link: /all', umami_href: '/all' }
   %>
-
-  <%# FIXME: We need links here %>
+	<%# FIXME: Needs SettingsService %>
   <%# @nav_links.each do |link| %>
     <%#= render '/shared/nav_link', url: link.url, name: link.name %>
   <%# end %>
