--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,5 +1,7 @@
   <%= content_tag :title, @page_title %>
   <!-- FIXME: favicon, this should be custom -->
+  <%# FIXME: Needs SettingsService %>
+
   <% if Current.account.settings_general&.favicon.present? %>
     <link rel="icon" type="image/png" href="<%= rails_blob_url(Current.account.settings_general.favicon) %>">
   <% else %>
@@ -10,7 +12,7 @@
   <%= tag.meta name: "viewport", content: "width=device-width,initial-scale=1" %>
   <%= tag.meta name: "twitter:card", content: "summary_large_image" %>
   <%= tag.meta property: "og:type", content: "website" %>
-  <%# FIXME: this should have @settings_general working %>
+	<%# FIXME: Needs SettingsService %>
   <%= tag.meta property: "og:locale", content: (@settings_general&.open_graph_locale.presence || "en_US") %>
   <%= tag.meta name: "robots", content: "index,follow" %>
   <%= tag.meta name: "description", content:  @meta_description %>
