CHANGE: improved blog show page

--- a/app/views/bravura_template_prime/blog/index/_section_hero.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_section_hero.html.erb
@@ -3,11 +3,11 @@
 		<div class="max-w-2xl mx-auto text-center">
 			<h1 class="whitespace-pre-wrap text-3xl font-bold tracking-tight text-secondary-900 sm:text-4xl lg:text-5xl">
 				<%# FIXME: Needs SettingsService %>
-			<%#= @blog_constants[:blog_hero_title] %> I AM A HERO SECTION
+			<%= @blog_constants[:blog_hero_title] %>
 			</h1>
 			<h2 class="whitespace-pre-wrap text-base font-medium text-secondary-500 sm:text-lg lg:text-xl">
 				<%# FIXME: Needs SettingsService %>
-				<%#= @blog_constants[:blog_hero_description] %>
+				<%= @blog_constants[:blog_hero_description] %>
 			</h2>
 		</div>
 	</div>
