--- a/app/views/bravura_template_prime/blog/index/_section_articles.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_section_articles.html.erb
@@ -13,11 +13,11 @@
 
 				</div>
 				<hr class="mt-12 border-secondary-200" />
-				<% if @pagy.pages > 1 %>
+				<%# if @pagy.pages > 1 %>
 					<div class="my-6 flex items-center justify-center">
-						<%== pagy_nav(@pagy) %>
+						<%#= pagy_nav(@pagy) %>
         			</div>
-      			<% end %>
+      			<%# end %>
 			</div>
 		</div>
 	</div>
