CHANGE: updated blog view code, plus supporting html and js

--- a/app/views/bravura_template_prime/blog/index/_section_articles.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_section_articles.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/index/_section_articles.html.erb %>
 <%= render partial: '/bravura_template_prime/blog/index/featured_articles', locals: { articles: @featured_articles } if @featured_articles.present?
 %> 
 <section id="all-posts" class="normal-articles-list bg-white py-12 sm:py-16 lg:py-20">
