--- a/app/views/bravura_template_prime/blog/show.html.erb
+++ b/app/views/bravura_template_prime/blog/show.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/show.html.erb %>
 <%= render "bravura_template_prime/blog/show/section_hero" %>
 <%= render "bravura_template_prime/blog/show/section_article_content" %>
 <%= render "bravura_template_prime/blog/show/section_related_articles" %>
