--- a/app/views/bravura_template_prime/blog/show/_cta_small.html.erb
+++ b/app/views/bravura_template_prime/blog/show/_cta_small.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/show/_cta_small.html.erb %>
 <div class="mt-8 sm:mt-12 sm:pt-12">
 <div class="cta-button-section normal-cta-button-section overflow-hidden bg-primary-500 rounded-3xl text-center selection:bg-primary-600">
   <div class="p-8 sm:p-12">
