--- a/app/views/bravura_template_prime/blog/show/_section_article_author.html.erb
+++ b/app/views/bravura_template_prime/blog/show/_section_article_author.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/show/_section_article_author.html.erb %>
 <div class="flex max-w-[var(--notion-max-width)] flex-col items-center mx-auto mt-8 border-t border-secondary-200 px-[calc(min(16px,8vw))] pt-8 sm:flex-row sm:items-start sm:mt-12 sm:pt-12">
   <%= link_to author_path(author),
     class: "h-24 w-24 shrink-0 overflow-hidden object-cover ring-1 ring-secondary-100 rounded-full",
