--- a/app/views/bravura_template_prime/blog/show/_section_article_content.html.erb
+++ b/app/views/bravura_template_prime/blog/show/_section_article_content.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/show/_section_article_content.html.erb %>
 <section class="normal-post-content bg-white py-12 sm:py-16 lg:py-20">
 	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 		<div class="grid grid-cols-1 items-start gap-y-12 gap-x-16 lg:grid-cols-12">
