--- a/app/views/bravura_template_prime/blog/show/_toc_plus_social.html.erb
+++ b/app/views/bravura_template_prime/blog/show/_toc_plus_social.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/show/_toc_plus_social.html.erb %>
 <div class="lg:sticky lg:col-span-3 lg:top-28">
 	<p class="text-xs font-bold uppercase tracking-widest text-secondary-500">Table of Contents</p>
 	<div class="relative mt-5">
