--- a/app/views/bravura_template_prime/blog/index/_featured_articles.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_featured_articles.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/index/_featured_articles.html.erb %>
 <section class="normal-featured-articles-list bg-secondary-50 pb-12 sm:pb-16 lg:pb-20">
 	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 		<h2 class="text-xl font-bold text-secondary-900 sm:text-2xl">Featured posts</h2>
