--- a/app/views/bravura_template_prime/blog/index/_section_hero.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_section_hero.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/bravura_template_prime/blog/index/_section_hero.html.erb %>
 <section class="hero-section bg-secondary-50 ">
 	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 		<div class="max-w-2xl mx-auto text-center">
