--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,60 +1,34 @@
+<%# app/views/bravura_template_prime/shared/_head.html.erb %>
 <title><%= content_tag :title, @presenter.get_setting("general.publication_name") %></title>
-<% if rails_blob_url(@presenter.get_setting('general.favicon')).present? %>
-  <link rel="icon" type="image/png" href="<%= rails_blob_url(Current.account.settings_general.favicon) %>">
-<% else %>
-  <link rel="icon" type="image/png" href="<%= asset_path('default_favicon.png') %>">
-<% end %>
-<!-- meta -->
+<%= favicon_link_tag @presenter.get_setting('general.favicon').present? ? rails_blob_url(@presenter.get_setting('general.favicon')) : asset_path('default_favicon.png') %>
+
 <%= tag.meta charset: "utf-8" %>
 <%= tag.meta name: "viewport", content: "width=device-width,initial-scale=1" %>
 <%= tag.meta name: "twitter:card", content: "summary_large_image" %>
 <%= tag.meta property: "og:type", content: "website" %>
-<%# FIXME: Needs SettingsService %>
 <%= tag.meta property: "og:locale", content: @presenter.get_setting('general.open_graph_locale') %>
 <%= tag.meta name: "robots", content: "index,follow" %>
 <%= tag.meta name: "description", content: @presenter.get_setting('general.meta_description') %>
 <%= tag.meta property: "og:title", content: @presenter.get_setting("general.publication_name") %>
 <%= tag.meta property: "og:description", content: @presenter.get_setting('general.meta_description') %>
-<%#= tag.meta property: "og:url", content: @presenter.get_setting('general.open_graph_locale')@article_url %>
-<%= tag.meta property: "og:image", content: url_for(@presenter.get_setting('general.social_cover')) %>
 <%= tag.meta property: "og:image", content: url_for(@presenter.get_setting('general.social_cover')) %>
 <%= tag.meta property: "og:site_name", content: @presenter.get_setting('general.publication_name') %>
 <%= tag.meta property: "og:type", content: "article" %>
 <%= csrf_meta_tags %>
-<!-- links -->
-<link rel="preload" as="image" href="" />
-<link rel="preconnect" href="https://fonts.bunny.net" />
-<link rel="stylesheet" href="https://fonts.bunny.net/css?family=inter:100,200,300,400,500,600,700,800,900&amp;display=swap" />
-<link rel="canonical" href="<%= request.base_url %>" />
-<%#
-<link rel="preconnect" href="https://cdn.feather.blog" />
-<link rel="preconnect" href="https://stats.feather.so" />
-%>
-<%# FIXME: this should find and preload blog_app/css01 for perfomance %>
-<%#= preload_link_tag 'blog_app/css01', media: 'all', 'data-turbo-track': 'reload' %>
-<%= stylesheet_link_tag "live_content/normal", media: "all", "data-turbo-track": "reload" %>
-<%= stylesheet_link_tag "blog_app/app-DTZPEUWL", media: 'all' %>
+
+<link rel="preconnect" href="https://fonts.bunny.net">
+<link rel="stylesheet" href="https://fonts.bunny.net/css?family=inter:100,200,300,400,500,600,700,800,900&amp;display=swap">
+<link rel="canonical" href="<%= request.base_url %>">
+
+<%= stylesheet_link_tag "bravura_template_prime/application", media: "all", "data-turbo-track": "reload" %>
+
 <style>
-<% if @button_radius.present? %>
-.notion-collection-page-properties {
-display: none !important;
-}
-:root {
---cta-button-radius: <%= @button_radius %>;
-}
-<% end %>
+  :root {
+    --cta-button-radius: <%= @button_radius %>;
+    --headings-font-family: <%= @presenter.get_setting("design.heading_font") %>, sans-serif;
+    --content-font-family: <%= @presenter.get_setting("design.content_font") %>, sans-serif;
+  }
+  .notion-collection-page-properties { display: none !important; }
 </style>
-<style>
-:root {
---headings-font-family: <%= @font_family %>, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
---content-font-family: <%= @font_family %>, sans-serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-</style>
-<style></style>
-<style id="_goober">
-@keyframes go2264125279{from{transform:scale(0) rotate(45deg);opacity:0;}to{transform:scale(1) rotate(45deg);opacity:1;}}@keyframes go3020080000{from{transform:scale(0);opacity:0;}to{transform:scale(1);opacity:1;}}@keyframes go463499852{from{transform:scale(0) rotate(90deg);opacity:0;}to{transform:scale(1) rotate(90deg);opacity:1;}}@keyframes go1268368563{from{transform:rotate(0deg);}to{transform:rotate(360deg);}}@keyframes go1310225428{from{transform:scale(0) rotate(45deg);opacity:0;}to{transform:scale(1) rotate(45deg);opacity:1;}}@keyframes go651618207{0%{height:0;width:0;opacity:0;}40%{height:0;width:6px;opacity:1;}100%{opacity:1;height:10px;}}@keyframes go901347462{from{transform:scale(0.6);opacity:0.4;}to{transform:scale(1);opacity:1;}}.go4109123758{z-index:9999;}.go4109123758 > *{pointer-events:auto;}
-</style>
-<style type="text/css">
-.medium-zoom-overlay{position:fixed;top:0;right:0;bottom:0;left:0;opacity:0;transition:opacity .3s;will-change:opacity}.medium-zoom--opened .medium-zoom-overlay{cursor:pointer;cursor:zoom-out;opacity:1}.medium-zoom-image{cursor:pointer;cursor:zoom-in;transition:transform .3s cubic-bezier(.2,0,.2,1)!important}.medium-zoom-image--hidden{visibility:hidden}.medium-zoom-image--opened{position:relative;cursor:pointer;cursor:zoom-out;will-change:transform}
-</style>
-<%# new_stuffs %>
+
+<%= yield :head %>
