--- a/app/views/shared/_javascript.html.erb
+++ b/app/views/shared/_javascript.html.erb
@@ -1,14 +1,16 @@
+<%# app/views/bravura_template_prime/shared/_javascript.html.erb %>
 <script>
-	// This script is for copying the canonical link to the clipboard
-	document.querySelector('button[aria-label="Copy the Canonical link"]').addEventListener('click', function() {
-		var canonicalLink = this.getAttribute('data-canonical');
-		var tempInput = document.createElement('input');
-		tempInput.style = 'position: absolute; left: -1000px; top: -1000px';
-		tempInput.value = canonicalLink;
-		document.body.appendChild(tempInput);
-		tempInput.select();
-		document.execCommand('copy');
-		document.body.removeChild(tempInput);
-		alert('Canonical link copied to clipboard');
-	});
+  document.addEventListener('DOMContentLoaded', function() {
+    var copyButton = document.querySelector('button[aria-label="Copy the Canonical link"]');
+    if (copyButton) {
+      copyButton.addEventListener('click', function() {
+        var canonicalLink = this.getAttribute('data-canonical');
+        navigator.clipboard.writeText(canonicalLink).then(function() {
+          alert('Canonical link copied to clipboard');
+        }).catch(function(err) {
+          console.error('Failed to copy text: ', err);
+        });
+      });
+    }
+  });
 </script>
