WIP: feature/get_setting

--- a/app/views/layouts/bravura_template_prime/application.html.erb
+++ b/app/views/layouts/bravura_template_prime/application.html.erb
@@ -1,18 +1,28 @@
 <%# app/views/layouts/bravura_template_prime/application.html.erb %>
+
 <!DOCTYPE html>
-<%= content_tag :html, dir: "ltr", lang: "en", class: "scroll-smooth antialiased selection:bg-primary-500 selection:text-primary-50", data: { theme: @blog_theme, graytheme: "gray#{@shade_of_gray}", mode: @site_mode } do %>
-  <head>
-    <%= render partial: "bravura_template_prime/shared/head" %>
-  </head>
-  <body class="overflow-x-hidden bg-white font-sans text-secondary-900 antialiased">
-    <div style="position:fixed;z-index:9999;top:16px;left:16px;right:16px;bottom:16px;pointer-events:none"></div>
-    <%= render partial: "bravura_template_prime/shared/top_nav" %>
-    <main>
-      <%= yield %>
-      <%= render partial: "bravura_template_prime/shared/cta" %>
-    </main>
-    <%= render partial: "bravura_template_prime/shared/footer" %>
-    <%= javascript_include_tag "bravura_template_prime/application", "data-turbo-track": "reload", defer: true %>
-    <%= render partial: "bravura_template_prime/shared/javascript" %>
-  </body>
-<% end %>
+<html lang="<%= I18n.locale %>">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= yield(:title) || "Bravura Blog" %></title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+
+  <%= stylesheet_link_tag "bravura_template_prime/application", media: "all" %>
+  <%= javascript_include_tag "bravura_template_prime/application", defer: true %>
+</head>
+<body>
+  <header>
+    <!-- Add header content -->
+  </header>
+
+  <main>
+    <%= yield %>
+  </main>
+
+  <footer>
+    <!-- Add footer content -->
+  </footer>
+</body>
+</html>
