--- a/app/views/bravura_template_prime/blog/show.html.erb
+++ b/app/views/bravura_template_prime/blog/show.html.erb
@@ -1,4 +1,5 @@
 <%# app/views/bravura_template_prime/blog/show.html.erb %>
-<%= render "bravura_template_prime/blog/show/section_hero" %>
-<%= render "bravura_template_prime/blog/show/section_article_content" %>
-<%= render "bravura_template_prime/blog/show/section_related_articles" %>
+<h1>I am the blog show page</h1>
+<%#= render "bravura_template_prime/blog/show/section_hero" %>
+<%#= render "bravura_template_prime/blog/show/section_article_content" %>
+<%#= render "bravura_template_prime/blog/show/section_related_articles" %>
