--- a/app/views/bravura_template_prime/index.html.erb
+++ b/app/views/bravura_template_prime/index.html.erb
@@ -1,7 +1,10 @@
+<%# app/views/bravura_template_prime/index.html.erb %>
 <h1>Blog Index Bro</h1>
-<p>This is the index template for BravuraTemplatePrime.</p>
+<p>This is the index template for BravuraTemplatePrime. (app/views/bravura_template_prime/index.html.erb)</p>
 <% if @general_blog_hero_title %>
   <h2>general is positive</h2>
   <h2><%= @general_blog_hero_title %></h2>
 <% end %>
+<%= "prime_meta_title #{@prime_meta_title}"%><br />
+<h2>now is the time</h2>
 <a href="google.com">Company</a>
