--- a/app/views/bravura_template_prime/blog/index/_section_hero.html.erb
+++ b/app/views/bravura_template_prime/blog/index/_section_hero.html.erb
@@ -5,11 +5,11 @@
 			<h1 class="whitespace-pre-wrap text-3xl font-bold tracking-tight text-secondary-900 sm:text-4xl lg:text-5xl">
 				<%# FIXME: Needs SettingsService %>
 			<%#= @blog_constants[:blog_hero_title] %>
-			<%= @presenter.get_setting("general.blog_hero_title") %>
+			<%= @presenter.get("general.blog_hero_title") %>
 			</h1>
 			<h2 class="whitespace-pre-wrap text-base font-medium text-secondary-500 sm:text-lg lg:text-xl">
 				<%# FIXME: Needs SettingsService %>
-				<%= @presenter.get_setting("general.blog_hero_description") %>
+				<%= @presenter.get("general.blog_hero_description") %>
 
 			</h2>
 		</div>
