--- a/app/views/bravura_template_prime/shared/_top_nav.html.erb
+++ b/app/views/bravura_template_prime/shared/_top_nav.html.erb
@@ -10,7 +10,7 @@
             <%= image_tag('default_logo.png', alt: "Default Logo", class: "h-8 w-auto mr-1") %>
           <% end %>
           <span class="text-2xl font-bold tracking-tight text-secondary-900">
-            <%= @presenter.get_setting('navigation.logo_text') %>
+            <%= @presenter.get('navigation.logo_text') %>
           </span>
         <% end %>
       </div>
