--- a/app/views/bravura_template_prime/shared/default/_cta.html.erb
+++ b/app/views/bravura_template_prime/shared/default/_cta.html.erb
@@ -3,11 +3,11 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col items-center gap-8 sm:max-w-2xl sm:mx-auto lg:max-w-2xl">
       <div class="text-center sm:max-w-xl sm:mx-auto lg:max-w-2xl">
-        <p class="text-base font-medium text-secondary-600"><%= @presenter.get_setting('cta.subtitle') %></p>
-        <h3 class="text-2xl font-bold tracking-tight text-secondary-900 mt-4 sm:text-3xl lg:text-4xl"><%= @presenter.get_setting('cta.title') %></h3>
+        <p class="text-base font-medium text-secondary-600"><%= @presenter.get('cta.subtitle') %></p>
+        <h3 class="text-2xl font-bold tracking-tight text-secondary-900 mt-4 sm:text-3xl lg:text-4xl"><%= @presenter.get('cta.title') %></h3>
       </div>
       <div class="w-full">
-        <%= form_tag @presenter.get_setting('cta.form_action'), method: :post, class: "flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-end", id: "newsletter-in-footer-wrapper-form" do %>
+        <%= form_tag @presenter.get('cta.form_action'), method: :post, class: "flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-end", id: "newsletter-in-footer-wrapper-form" do %>
           <div class="flex-1">
             <label for="email" class="sr-only">Email</label>
             <div>
