--- a/app/views/bravura_template_prime/blog/index.html.erb
+++ b/app/views/bravura_template_prime/blog/index.html.erb
@@ -1,12 +1,20 @@
-<%# app/views/bravura_template_prime/blog/index.html.erb %>
-<h1>Blog Index Dad</h1>
+<%= render 'bravura_template_prime/shared/hero' %>
 
-<%#= render "bravura_template_prime/blog/index/section_hero" %>
-<%#= render "bravura_template_prime/blog/index/section_articles" %>
-<%# FIXME: needs SettingsService setup %>
-<%= @presenter.get("general.blog_hero_title") %>
-<br />
-<br />
-<%= "meta_title #{@meta_title.inspect}"%><br />
-<h2>now is the time</h2>
-<%= link_to(current_account&.name || "Home", "/") %>
+<section class="section normal-featured-articles-list bg-secondary-50 pb-12 sm:pb-16 lg:pb-20">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="text-xl font-bold text-secondary-900 sm:text-2xl">Featured posts</h2>
+    <%= render 'bravura_template_prime/blog/featured_articles' %>
+  </div>
+</section>
+
+<section id="all-posts" class="section normal-articles-list bg-white py-12 sm:py-16 lg:py-20">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="text-xl font-bold text-secondary-900 sm:text-2xl">All articles</h2>
+    <div class="relative grid grid-cols-1 items-start gap-16 mt-8 lg:grid-cols-12">
+      <%= render 'bravura_template_prime/shared/categories_sidebar' %>
+      <%= render 'bravura_template_prime/blog/articles_grid' %>
+    </div>
+  </div>
+</section>
+
+<%= render 'bravura_template_prime/shared/newsletter' %>
