--- a/app/views/layouts/bravura_template_prime/application.html.erb
+++ b/app/views/layouts/bravura_template_prime/application.html.erb
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<%= content_tag :html,
+  dir: "ltr",
+  lang: "en",
+  class: "scroll-smooth antialiased selection:bg-primary-500 selection:text-primary-50",
+  data: {
+    theme: BlogTheme.find(@presenter.get("design.blog_theme_id")) ,
+    graytheme: ShadesOfGray.find(@presenter.get("design.shades_of_gray_id")).name,
+    mode: SiteMode.find(@presenter.get("design.site_mode_id")).site_theme
+  } do %>
+      
 <head>
-  <title>BravuraTemplatePrime</title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-
-  <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-  <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
-
-  <%= stylesheet_link_tag "bravura_template_prime/application", media: "all" %>
-  <%= javascript_include_tag "bravura_template_prime/application", defer: true %>
+  <%= render "bravura_template_prime/shared/head"%>
 </head>
+
 <body class="flex min-h-screen flex-col justify-between">
+<%# <body class="overflow-x-hidden bg-white font-sans text-secondary-900 antialiased">   %>
   <%= render 'bravura_template_prime/shared/header' %>
 
   <main class="main-wrapper flex-1" role="main">
@@ -20,4 +23,5 @@
 
   <%= render 'bravura_template_prime/shared/footer' %>
 </body>
-</html>
+  <!-- Your page content goes here -->
+<% end %>
