--- a/app/views/layouts/bravura_template_prime/application.html.erb
+++ b/app/views/layouts/bravura_template_prime/application.html.erb
@@ -4,7 +4,7 @@
   lang: "en",
   class: "scroll-smooth antialiased selection:bg-primary-500 selection:text-primary-50",
   data: {
-    theme: BlogTheme.find(@presenter.get("design.blog_theme_id")) ,
+    theme: BlogTheme.find(@presenter.get("design.blog_theme_id")).name ,
     graytheme: ShadesOfGray.find(@presenter.get("design.shades_of_gray_id")).name,
     mode: SiteMode.find(@presenter.get("design.site_mode_id")).site_theme
   } do %>
