--- a/app/views/bravura_template_prime/shared/_newsletter.html.erb
+++ b/app/views/bravura_template_prime/shared/_newsletter.html.erb
@@ -6,7 +6,7 @@
       </h2>
       <p class="mt-4 text-secondary-600">Ready to take the next big step for your business?</p>
     </div>
-    <%#= render 'bravura_template_prime/shared/newsletter_form' %>
+    <%= render 'bravura_template_prime/shared/newsletter_form' %>
     <p class="text-sm text-secondary-500 mt-4">No spam. Unsubscribe at any time.</p>
   </div>
 </section>
