--- a/app/views/bravura_template_prime/shared/_header.html.erb
+++ b/app/views/bravura_template_prime/shared/_header.html.erb
@@ -1,8 +1,13 @@
 <header class="navbar sticky z-20 h-16 bg-white/90 shadow-sm backdrop-blur-lg top-0 py-3">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="flex items-center justify-between">
-      <%= render 'bravura_template_prime/shared/logo' %>
-      <%= render 'bravura_template_prime/shared/nav_links' %>
-    </div>
-  </div>
+	<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+		<div class="flex items-center justify-between">
+      <%= render "/bravura_template_prime/shared/logo" %>
+      <%= render "/bravura_template_prime/shared/nav_links" %>
+			<div class="nav-links-wrapper-right flex items-center justify-end gap-3 lg:gap-4">
+        <%= render "/bravura_template_prime/shared/search_glass_button" %>
+        <%= render "/bravura_template_prime/shared/search_widget_dialog" %>
+        <%= render "/bravura_template_prime/shared/hamburger_menu" %>
+			</div>
+		</div>
+	</div>
 </header>
